# aim-resolve

./: .gitignore  README.md  pyproject.toml
demos/: yaml_nifty.ipynb  yaml_nifty.py
demos/config/: base.yml  opt_1.yml  opt_2.yml
src/aim_resolve/: __init__.py  builders.py  clustering.py  data.py  dataset.py  likelihood.py  mask.py  modeling.py  transition.py
src/aim_resolve/img_data/: __init__.py  background.py  components.py  data.py  jax_fun.py  objects.py  points.py  tiles.py
src/aim_resolve/model/: __init__.py  components.py  gaussian.py  integer.py  likelihood.py  map.py  noise.py  normal.py  points.py  prior.py  signal.py  space.py  tiles.py  util.py
src/aim_resolve/optimize/: __init__.py  fast_opt_kl.py  opt_config.py  opt_dct.py  opt_kl.py  opt_vi.py  samples.py  set_config.py  util.py  yml.py
src/aim_resolve/plot/: __init__.py  arrays.py  classes.py  extra.py  image.py  models.py  power.py  util.py
src/aim_resolve/resolve/: __init__.py  constants.py  fast.py  model.py  observation.py  response.py
src/aim_resolve/train/: __init__.py  dataset.py  loss.py
steering/: snakefile
steering/config/: 0_mdl.yml  base.yml  snake.yml
steering/data/: data.yml  data_gen.py
steering/data/config/: data.yml
steering/nifty/: nifty_rec.py
steering/nifty/config/: base.yml  cyg.yml  eso.yml  exp.yml  fast.yml  fast_eso.yml
steering/scripts/: detect.py  initialize.py  model.py  pre_fit.py  reconstruct.py
steering/train/: train_uno.py
steering/train/config/: train.yml  uno.yml
steering/train/files/: uno_1.pth  uno_1.yml
